Fixing trigger z-index problem when menu is open

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -34,11 +34,6 @@
 
     &__body_overlay
         display: none
-        width: 100%
-        height: 100%
-        top: 0
-        position: fixed
-        z-index: 5
 
     &__body_on_close
         margin-left: 0
@@ -46,8 +41,8 @@
 
     &__body_on_open
         margin-left: 350px
-        position: fixed
         overflow: hidden
+        position: fixed
         width: 100%
         height: 100%
         transition: 0.8s
@@ -55,8 +50,12 @@
             margin-left: 220px
 
         .simple_slide_menu__body_overlay
-            display: flex
+            display: block
+            width: 100%
+            height: 100%
+            top: 0
+            position: absolute
 
         .simple_slide_menu__trigger
-            position: fixed
-            z-index: 5
+            position: absolute
+            z-index: 6
